--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
+    targetPath: '$(Build.BinariesDirectory)'
     artifact: 'Application'
