--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Build.BinariesDirectory)'
+    targetPath: '$(Build.SourcesDirectory)\bin\$(buildConfiguration)\'
     artifact: 'Application'
