Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,5 +34,5 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Build.SourcesDirectory)\bin\$(buildConfiguration)\'
+    targetPath: 'Calculator\bin\$(buildConfiguration)\'
     artifact: 'Application'
