--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
   inputs:
     testSelector: 'testAssemblies'
     testAssemblyVer2: |
-      **\*test*.dll
+      **\*tests.dll
       !**\*TestAdapter.dll
       !**\obj\**
     platform: '$(buildPlatform)'
