--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,22 +27,11 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
-- task: VSTest@2
+- task: DotNetCoreCLI@2
   inputs:
-    testSelector: 'testAssemblies'
-    testAssemblyVer2: |
-      **\*tests.dll
-      !**\*TestAdapter.dll
-      !**\obj\**
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-    otherConsoleOptions: '/Framework:.NETCoreApp,Version=v3.0'
-    codeCoverageEnabled: true
-
-- task: reportgenerator@4
-  inputs:
-    reports: '*.coverage'
-    targetdir: 'coveragereport'
+    command: 'test'
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
 
 - task: PublishPipelineArtifact@1
   inputs:
