Update azure-pipelines.yml for Azure Pipelines
Add report generator

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,12 @@ steps:
     projects: '**/*Tests/*.csproj'
     arguments: '--configuration $(buildConfiguration) --collect:"XPlat Code Coverage"'
 
+- task: reportgenerator@4
+  inputs:
+    reports: 'coverage.cobertura.xml'
+    targetdir: 'coveragereport'
+    reporttypes: 'HtmlInline_AzurePipelines;Cobertura;Badges'
+
 - task: PublishPipelineArtifact@1
   inputs:
     targetPath: '$(Build.SourcesDirectory)\Calculator\bin\$(buildConfiguration)\'
