--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,12 +31,12 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*Tests/*.csproj'
-    arguments: '--configuration $(buildConfiguration) --collect:"XPlat Code Coverage"'
+    arguments: '--configuration $(buildConfiguration) --collect "XPlat Code Coverage" --results-directory $(Build.SourcesDirectory)\TestResults'
 
 - task: reportgenerator@4
   inputs:
-    reports: 'coverage.cobertura.xml'
-    targetdir: 'coveragereport'
+    reports: 'TestResults\coverage.cobertura.xml'
+    targetdir: 'TestResults\coveragereport'
     reporttypes: 'HtmlInline_AzurePipelines;Cobertura;Badges'
 
 - task: PublishPipelineArtifact@1
