--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
 
 - task: reportgenerator@4
   inputs:
-    reports: 'TestResults\coverage.cobertura.xml'
+    reports: 'TestResults\*\coverage.cobertura.xml'
     targetdir: 'TestResults\coveragereport'
     reporttypes: 'HtmlInline_AzurePipelines;Cobertura;Badges'
 
