--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,14 @@ steps:
     arguments: '--configuration $(buildConfiguration) --logger trx --collect "XPlat Code Coverage" --results-directory $(Build.SourcesDirectory)\TestResults'
     publishTestResults: false
 
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'VSTest'
+    testResultsFiles: '**/*.trx'
+    searchFolder: '$(Build.SourcesDirectory)\TestResults'
+    buildPlatform: '$(buildPlatform)'
+    buildConfiguration: '$(buildConfiguration)'
+
 - task: reportgenerator@4
   inputs:
     reports: 'TestResults\*\coverage.cobertura.xml'
