--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -6,6 +6,13 @@
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Calculator.ico</ApplicationIcon>
+    <StartupObject>Calculator.App</StartupObject>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
