--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,6 +67,6 @@ steps:
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Build.SourcesDirectory)\Calculator\bin\$(buildConfiguration)\*\win-x64\publish'
+    targetPath: '$(Build.SourcesDirectory)\Calculator\bin\$(buildConfiguration)\netcoreapp3.1\win-x64\publish'
     artifact: 'Application'
     publishLocation: 'pipeline'
